dataviz/styles/style.css
@import '../node_modules/normalize.css/normalize.css';
@import './chart-colors.css';

* {
  box-sizing: border-box;
}

$headerHeight: 50px;
$hHeader: linear-gradient(to right, #3d3f74, #6757a0);
$hHeaderText: #fff;
$hText: #73629e;
$hBorder: #d8dde6;
$hLinkBorder: rgba(0, 0, 0, 0.15);

$sfHeader: #dae0e4;
$sfHeaderText: #29347c;
$sfText: #054d61;
$sfBorder: #d8dde6;
$sfHeaderHeight: 77px;

$diagramHeight: 500px;

body,
html {
  position: relative;
  font-family: Helvetica, Arial, sans-serif;
}

header {
  height: $headerHeight;
  font-weight: 100;

  body.salesforce & {
    height: $sfHeaderHeight;
  }

  .logo {
    position: relative;
    z-index: 10;
  }

  nav {
    height: 100%;
    padding: 0 0 0 15px;
    display: flex;
    justify-content: space-between;
    align-items: center;

    ul {
      margin: 0;
      padding: 0;
      list-style: none;
    }
  }

  .nav-items > li {
    margin-left: 15px;
    padding: 17px 0 15px;
    position: relative;
    display: inline-block;
    font-size: 0.9em;

    &.nav-link {
      border-left: 1px solid $hLinkBorder;
      border-right: 1px solid $hLinkBorder;
      margin-left: 0;
      padding: 17px 15px;

      &:first-of-type {
        border-left: 2px solid $hLinkBorder !important;
      }

      &:hover {
        cursor: pointer;

        .dropdown {
          display: block;
        }
      }
    }

    &.has-dropdown {
      position: relative;
      padding-right: 30px;

      &:after {
        content: '\02c6';
        font-size: 150%;
        display: inline-block;
        position: absolute;
        top: 7px;
        right: 15px;
        transform: rotate(180deg);
      }
    }
  }

  .title {
    font-weight: 400;

    @media screen and (max-width: 500px) {
      display: none;
    }

    @media screen and (min-width: 800px) {
      position: absolute;
      left: 50%;
      width: 200px;
      margin-left: -100px;
      text-align: center;
    }
  }

  .dropdown {
    width: 200px;
    padding: 10px 20px;
    display: none;
    position: absolute;
    z-index: 10;
    right: -3px;
    top: 45px;
    background: #fff;
    border-radius: 4px;
    border: 1px solid $hBorder;
    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.05);
    line-height: 1.3;
    color: $hText;
    cursor: default;

    li a {
      margin: 10px 0;
      display: block;
      text-decoration: none;
      color: $hText;
    }
  }

  body.heroku & {
    background: $hHeader;
    color: $hHeaderText;

    .logo {
      width: 108px;
      height: 30px;
      background: url('/public/logo-heroku-white.svg') no-repeat center center;
    }
  }

  body.salesforce & {
    background: $sfHeader;
    color: $sfHeaderText;

    .logo {
      width: 93px;
      height: 65px;
      background: url('/public/logo-salesforce.svg') no-repeat center center;
      background-size: 93px 65px;
    }
  }
}

.architecture {
  width: 100%;
  height: $diagramHeight;
  padding: 0 5px;
  position: absolute;
  top: $headerHeight;
  z-index: 0;
  background: white;
  text-align: center;

  img {
    max-width: 100%;
  }

  iframe {
    border: none;
  }

  body.salesforce & {
    top: $sfHeaderHeight;
  }
}

main {
  height: calc(100vh - $headerHeight);
  padding: 7vh 5vw 0;
  display: flex;
  flex-direction: column;
  position: relative;
  z-index: 1;
  background: linear-gradient(to bottom, #f2f2f4, #fff);
  transition: transform 0.5s;

  &.open {
    transform: translate(0px, $diagramHeight);
  }

  body.salesforce & {
    height: calc(100vh - $sfHeaderHeight);
  }
}

/* --- Chart containers --*/
.chart-container {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  margin-bottom: 120px;

  svg,
  svg > g {
    overflow: visible;
  }

  .x-axis {
    text {
      font-size: 14px;
      font-weight: bold;
    }

    .tick line,
    > path {
      display: none;
    }
  }

  text {
    cursor: default;
  }

  .title {
    text-transform: uppercase;
    text-align: center;
    margin: 0 0 25px 0;
    font-size: 0.8em;
    line-height: 1.3;
    letter-spacing: 1px;
    font-weight: bold;
    font-size: 16px;

    body.heroku & {
      color: $hText;
    }

    body.salesforce & {
      color: $sfText;
    }
  }

  .chart {
    border-style: solid;
    border-width: 1px;
    border-radius: 3px;
    height: 100%;
    background: #ffffff;
    position: relative;

    body.heroku & {
      border-color: $hBorder;
    }

    body.salesforce & {
      border-color: $sfBorder;
    }
  }

  .chart.loading:after {
    position: absolute;
    top: calc(50% - 9px);
    left: calc(50% - 30px);
    color: #ccc;
    height: 18px;
    width: 60px;
    text-align: center;
    content: '...';
  }
}

.footer-legend {
  margin-bottom: 40px;

  ul {
    margin: 0;
    padding: 0;
    background: white;

    li {
      position: relative;
      display: inline-block;
      margin-right: 25px;
      padding: 11px 0;
      padding-left: 25px;
      font-size: 14px;
      line-height: 18px;
      color: $hChartText;
      text-transform: capitalize;
      margin-left: 8px;
      font-weight: bold;

      &:before {
        width: 25px;
        height: 25px;
        border-radius: 3px;
        content: '';
        display: block;
        position: absolute;
        left: -8px;
        top: 8px;
      }

      body.heroku & {
        &.color-1:before {
          background: $hColor1;
        }
        &.color-2:before {
          background: $hColor2;
        }
        &.color-3:before {
          background: $hColor3;
        }
        &.color-4:before {
          background: $hColor4;
        }
        &.color-5:before {
          background: $hColor5;
        }
        &.color-6:before {
          background: $hColor6;
        }
      }

      body.salesforce & {
        &.color-1:before {
          background: $sfColor1;
        }
        &.color-2:before {
          background: $sfColor2;
        }
        &.color-3:before {
          background: $sfColor3;
        }
        &.color-4:before {
          background: $sfColor4;
        }
        &.color-5:before {
          background: $sfColor5;
        }
        &.color-6:before {
          background: $sfColor6;
        }
      }
    }
  }
}

